--- a/assets/styles/salesforce-lightning-design-system.css
+++ b/assets/styles/salesforce-lightning-design-system.css
@@ -4,6 +4,11 @@
   margin: 0 auto;
 }
 
+.forecasts {
+  min-width: 670px;
+  width: 75vh;
+}
+
 .white-opaque-background {
   background: rgba(255, 255, 255, 0.75);
 }
