Add error message for HTTPS

--- a/assets/styles/salesforce-lightning-design-system.css
+++ b/assets/styles/salesforce-lightning-design-system.css
@@ -38,6 +38,10 @@ li > h2 {
   top: 12px;
 }
 
+.https-issue > p ~ p {
+  display: hidden;
+}
+
 #milwaukee {
   background-image: url('../images/milwaukee.jpg');
 }
