--- a/assets/styles/salesforce-lightning-design-system.css
+++ b/assets/styles/salesforce-lightning-design-system.css
@@ -4,11 +4,6 @@
   margin: 0 auto;
 }
 
-.forecasts {
-  min-width: 670px;
-  width: 75vh;
-}
-
 .white-opaque-background {
   background: rgba(255, 255, 255, 0.75);
 }
@@ -311,7 +306,7 @@ html {
   font-family: "Salesforce Sans", Arial, sans-serif;
   font-size: 100%;
   line-height: 1.5;
-  background: #b0c4df;
+  background: #b0c4df ;
   color: #080707;
   -webkit-tap-highlight-color: transparent; }
 
@@ -9606,20 +9601,21 @@ a.slds-button--inverse:focus {
 .slds-brand-band:before {
   content: '';
   display: block;
-  position: absolute;
+  position: fixed;
   z-index: -1;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  background-image: url("/assets/images/themes/oneSalesforce/banner-brand-default.png"), linear-gradient(to top, rgba(25, 85, 148, 0) 0, #195594);
+  background-image: url("../images/themes/classic/banner-group-public-default.png"), linear-gradient(to top, rgba(25, 85, 148, 0) 0, #195594);
   background-repeat: repeat-x;
+  background-attachment: fixed;
   background-position: top left; }
 
 .slds-brand-band:after {
   content: none;
   display: block;
-  position: absolute;
+  position: fixed;
   z-index: -1;
   left: 0;
   right: 0;
